# apps/backend/src/auth/dto/login.dto.ts
@@ -1,14 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-import { IsEmail, IsString, MaxLength } from 'class-validator';
-
-export class LoginDto {
-  @ApiProperty({ example: 'user@example.com', format: 'email' })
-  @IsEmail()
-  @MaxLength(255)
-  email: string;
-
-  @ApiProperty({ example: 'P@ssw0rd!' })
-  @IsString()
-  @MaxLength(72)
-  password: string;
-}
