# apps/backend/src/users/entities/user.entity.ts
@@ -4,8 +4,19 @@ export default class User {
   @ApiProperty({ format: 'uuid' })
   id: string;
 
-  @ApiProperty({ format: 'email' })
-  email: string;
+  @ApiProperty({
+    description: '전화번호(정규화된 숫자만)',
+    example: '01012345678',
+  })
+  phone: string;
+
+  @ApiProperty({
+    type: String,
+    format: 'date',
+    nullable: true,
+    description: '생년월일',
+  })
+  birthday: Date | null;
 
   @ApiProperty()
   displayName: string;
